scenarios/01-basic/tls-passthrough/30-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mtls-multi-namespace-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: mtls
      protocol: TLS
      port: 9443
      hostname: "*.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
