scenarios/01-basic/tls-passthrough/31-backend-a-tlsroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: backend-a-mtls-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: mtls-multi-namespace-gateway
      namespace: gateway-system
      sectionName: mtls
  hostnames:
    - mtls-a.example.test
  rules:
    - backendRefs:
        - name: backend-mtls
          port: 9443
